--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "basic_common_cpp"]
 	path = basic_common_cpp
-	url = git@github.com:MathieuDutSik/basic_common_cpp.git
-	branch = master
+	url = http://github.com/MathieuDutSik/basic_common_cpp.git
