Elimination of MyMatrix and other dependency.
  Mathieu

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -11,9 +11,9 @@ CC		= g++ -std=c++14 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fstac
 NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
 
-CLOCAL          = -I../src_number -I../src_matrix -I../src_basic -I../src_comb -I../src_graph
+CLOCAL          = -I../src_number -I../src_basic -I../src_comb
 
-CFLAGS 		= -I$(GMP_INCDIR) -I$(BOOST_INCDIR) -I$(EIGEN_PATH)
+CFLAGS 		= -I$(GMP_INCDIR) -I$(BOOST_INCDIR)
 
 LIBS		= -lm $(GMP_CXX_LINK) -pthread
 
