More testing functionality inserted.

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -1,5 +1,6 @@
 #PROGRAM	= TestStabilizerOnSet
-PROGRAM	= TestRepresentativeActionOnSet
+PROGRAM	= GapStabilizerOnSet
+#PROGRAM	= TestRepresentativeActionOnSet
 #PROGRAM	= TestCompilation TestSymmetricGroup TestStabilizerOnSet
 #PROGRAM	= TestSymmetricGroup
 
