--- a/src_gap/Makefile_spec
+++ b/src_gap/Makefile_spec
@@ -12,9 +12,9 @@ CC		= g++ -std=c++17 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fstac
 NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
 
-CLOCAL          = -I../src_number -I../src -I../src_basic -I../src_comb
+CLOCAL          = -I../src_number -I../src_basic -I../src_comb
 
-CFLAGS 		= -I$(GMP_INCDIR)  -I$(PERMLIB_INCDIR) -I$(BOOST_INCDIR)
+CFLAGS 		= -I$(GMP_INCDIR) -I$(BOOST_INCDIR)
 
 LIBS		= -lm $(GMP_CXX_LINK) -pthread
 
