Some progress on the problem. Next is to handle the genlabels values to make it identical to the GAP code.

--- a/src_gap/Makefile_spec
+++ b/src_gap/Makefile_spec
@@ -7,7 +7,8 @@ OBJECTS		= $(PROGRAM:%=%.o)
 #CC		= icpc -std=c++11 -Wall -g -O2
 #CC		= clang++ -Weverything -std=c++11
 #CC		= g++ -std=c++11 -Wall -g -O2
-CC		= g++ -std=c++17 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fstack-protector-all
+CC		= g++ -std=c++17 -Wall -g -O2
+#CC		= g++ -std=c++17 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fstack-protector-all
 
 NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
