Inserting one new file.

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -1,5 +1,6 @@
 #PROGRAM	= TestStabilizerOnSet
-PROGRAM	= GapStabilizerOnSet
+#PROGRAM	= GapStabilizerOnSet
+PROGRAM	= GapRepresentativeActionOnSet
 #PROGRAM	= TestRepresentativeActionOnSet
 #PROGRAM	= TestCompilation TestSymmetricGroup TestStabilizerOnSet
 #PROGRAM	= TestSymmetricGroup
