Start debugging of the equivalence code. One bug down.

--- a/src_gap/Makefile_spec
+++ b/src_gap/Makefile_spec
@@ -1,6 +1,7 @@
 #PROGRAM	= TestCompilation
 #PROGRAM	= TestCompilation TestSymmetricGroup TestStabilizerOnSet
-PROGRAM	= TestStabilizerOnSet
+#PROGRAM	= TestStabilizerOnSet
+PROGRAM	= TestRepresentativeActionOnSet
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
