--- a/src_gap/Makefile_spec
+++ b/src_gap/Makefile_spec
@@ -1,7 +1,8 @@
 #PROGRAM	= TestCompilation
 #PROGRAM	= TestCompilation TestSymmetricGroup TestStabilizerOnSet
 #PROGRAM	= TestStabilizerOnSet
-PROGRAM	= TestRepresentativeActionOnSet
+#PROGRAM	= TestRepresentativeActionOnSet
+PROGRAM	= GapCanonicalImage
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
