--- a/src_gap/Makefile_spec
+++ b/src_gap/Makefile_spec
@@ -1,21 +1,22 @@
 #PROGRAM	= TestCompilation
 #PROGRAM	= TestCompilation TestSymmetricGroup TestStabilizerOnSet
-#PROGRAM	= TestStabilizerOnSet
+PROGRAM	= TestStabilizerOnSet
 #PROGRAM	= TestRepresentativeActionOnSet
-PROGRAM	= GapCanonicalImage
+#PROGRAM	= GapCanonicalImage
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
 #CC		= icpc -std=c++11 -Wall -g -O2
 #CC		= clang++ -Weverything -std=c++11
 #CC		= g++ -std=c++11 -Wall -g -O2
-CC		= g++ -std=c++17 -Wall -g -O2
-#CC		= g++ -std=c++17 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fstack-protector-all
+#CC		= g++ -std=c++17 -Wall -g -O2
+CC		= g++ -std=c++17 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fstack-protector-all
 
 NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
 
-CLOCAL          = -I../src_number -I../src_basic -I../src_comb -DPERMUTALIB_BLOCKING_SANITY_CHECK
+#CLOCAL          = -I../src_number -I../src_basic -I../src_comb -DPERMUTALIB_BLOCKING_SANITY_CHECK
+CLOCAL          = -I../src_number -I../src_basic -I../src_comb -DPERMUTALIB_BLOCKING_SANITY_CHECK -DSYNCHRONIZED_DEBUG_GAP478
 
 CFLAGS 		= -I$(GMP_INCDIR) -I$(BOOST_INCDIR)
 
