Add sanity check.

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -16,8 +16,8 @@ OBJECTS		= $(PROGRAM:%=%.o)
 #CC		= g++ -std=c++14 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fstack-protector-all
 #CC		= g++ -std=c++14 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fsanitize=bool -fstack-protector-all
 #CC		= g++ -std=c++17 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fsanitize=bool -fsanitize=bounds -fstack-protector-all
-#CC		= g++ -std=c++17 -Wall -g -O2
-CC		= clang++ -std=c++17 -Weverything
+CC		= g++ -std=c++17 -Wall -g -O2
+#CC		= clang++ -std=c++17 -Weverything
 
 NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
