Some insertion and maybe a faster code.

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -5,7 +5,8 @@
 #PROGRAM	= TestRepresentativeActionOnSet
 #PROGRAM	= TestSymmetricGroup
 #PROGRAM	= GapCanonicalImage
-PROGRAM	= BenchmarkingPermutalib
+#PROGRAM	= BenchmarkingPermutalib
+PROGRAM	= BenchmarkingPermutalib GapCanonicalImage
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
