Insert of code for the factorization of integers.

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -6,7 +6,8 @@
 #PROGRAM	= TestSymmetricGroup
 #PROGRAM	= GapCanonicalImage
 #PROGRAM	= BenchmarkingPermutalib
-PROGRAM	= BenchmarkingPermutalib GapCanonicalImage
+#PROGRAM	= BenchmarkingPermutalib GapCanonicalImage
+PROGRAM	= Factorize
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
