More signness problems resolved.

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -18,8 +18,10 @@ OBJECTS		= $(PROGRAM:%=%.o)
 #CC		= g++ -std=c++14 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fstack-protector-all
 #CC		= g++ -std=c++14 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fsanitize=bool -fstack-protector-all
 #CC		= g++ -std=c++17 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fsanitize=bool -fsanitize=bounds -fstack-protector-all
-CC		= g++ -std=c++17 -Wall -g -O3
-#CC		= clang++ -std=c++17 -O3
+#CC		= g++ -std=c++17 -Wall -g -O3
+#CC		= g++ -std=c++17 -Wall -g -O3
+#CC		= clang++ -std=c++17 -O3 -fprofile-instr-generate
+CC		= clang++ -std=c++17 -O3 -fprofile-instr-use=a.profdata
 
 NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
