Addition of code for testing equality of groups.

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -1,11 +1,12 @@
 #PROGRAM	= GapRepresentativeActionOnSet GapStabilizerOnSet TestStabilizerOnSet TestRepresentativeActionOnSet GapEquivalenceOnSet GapCanonicalImage BenchmarkingPermutalib Factorize
+PROGRAM	= EqSymmGroup
 #PROGRAM	= TestStabilizerOnSet
 #PROGRAM	= GapStabilizerOnSet
 #PROGRAM	= GapRepresentativeActionOnSet
 #PROGRAM	= TestRepresentativeActionOnSet
 #PROGRAM	= TestSymmetricGroup
 #PROGRAM	= GapCanonicalImage
-PROGRAM	= BenchmarkingPermutalib
+#PROGRAM	= BenchmarkingPermutalib
 #PROGRAM	= BenchmarkingPermutalib GapCanonicalImage
 #PROGRAM	= Factorize
 
@@ -21,7 +22,8 @@ OBJECTS		= $(PROGRAM:%=%.o)
 #CC		= g++ -std=c++17 -Wall -g -O3
 #CC		= g++ -std=c++17 -Wall -g -O3
 #CC		= clang++ -std=c++17 -O3 -fprofile-instr-generate
-CC		= clang++ -std=c++17 -O3 -fprofile-instr-use=a.profdata
+#CC		= clang++ -std=c++17 -O3 -fprofile-instr-use=a.profdata
+CC		= clang++ -std=c++17 -O3
 
 NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
