Resolution of compilation bugs.

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -39,7 +39,7 @@ CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK
 #CFLAGS 		= -I$(BOOST_INCDIR) -I$(GMP_INCDIR) 
 CFLAGS 		= -I$(BOOST_INCDIR)
 
-LIBS		= $(GMP_CXX_LINK)
+LIBS		= $(GMP_CXX_LINK) $(BOOST_LINK)
 
 %.o: %.cpp
 	@echo
