--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -1,4 +1,4 @@
-#PROGRAM	= GapRepresentativeActionOnSet GapStabilizerOnSet GapEquivalenceOnSet GapCanonicalImage BenchmarkingPermutalib Factorize TestPermutationProduct TestSymmetricGroup GroupProperties EqSymmGroup TestSerialization GapDerivedSubgroup
+PROGRAM	= GapRepresentativeActionOnSet GapStabilizerOnSet GapEquivalenceOnSet GapCanonicalImage BenchmarkingPermutalib Factorize TestPermutationProduct TestSymmetricGroup GroupProperties EqSymmGroup TestSerialization GapDerivedSubgroup
 #PROGRAM	= EqSymmGroup
 #PROGRAM	= GapStabilizerOnSet
 #PROGRAM	= GapRepresentativeActionOnSet
@@ -7,7 +7,7 @@
 #PROGRAM	= GapCanonicalImage
 #PROGRAM	= GroupProperties
 #PROGRAM	= GapDerivedSubgroup
-PROGRAM	= BenchmarkingPermutalib
+#PROGRAM	= BenchmarkingPermutalib
 #PROGRAM	= BenchmarkingPermutalib GapCanonicalImage
 #PROGRAM	= Factorize
 #PROGRAM	= TestSerialization
@@ -22,8 +22,8 @@ OBJECTS		= $(PROGRAM:%=%.o)
 #CC		= g++ -std=c++14 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fsanitize=bool -fstack-protector-all
 #CC		= g++ -std=c++17 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fsanitize=bool -fsanitize=bounds -fstack-protector-all
 #CC		= g++-11 -std=c++17 -Wall -g -O2 -fsanitize=address -fsanitize=pointer-subtract -fsanitize=undefined -fsanitize=null -fsanitize=bounds -fsanitize=bounds-strict -fsanitize=alignment -fsanitize=leak -Wstrict-aliasing
-CC		= g++ -pg -std=c++17 -Wall -g -O3
-#CC		= g++ -std=c++17 -Wall -g -O3
+#CC		= g++ -pg -std=c++17 -Wall -g -O3
+CC		= g++ -std=c++17 -Wall -g -O3
 #CC		= g++ -std=c++17 -Wall -Wconversion -g -O3
 #CC		= g++ -std=c++17 -Wall -Wextra -g -O3
 #CC		= clang++ -std=c++17 -Wall -Wconversion -g -O3
