Partially support libgap. Turns out to be 17 times slower.

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -8,7 +8,8 @@
 #PROGRAM	= GroupProperties
 #PROGRAM	= GapSmallGeneratingSet
 #PROGRAM	= GapDerivedSubgroup
-PROGRAM	= BenchmarkingPermutalib
+PROGRAM	= BenchmarkingPermutalib MinimalExample
+#PROGRAM	= MinimalExample
 #PROGRAM	= BenchmarkingPermutalib GapCanonicalImage
 #PROGRAM	= Factorize
 #PROGRAM	= TestSerialization
